# nfc_ndef

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
include/: ndef.h  ndef_text.h  ndef_tlv.h  st25dv.h  st25dv_hal.h
src/: ndef.c  ndef_text.c  ndef_tlv.c  st25dv.c
test/: mock_hal.c  mock_hal.h  test_helpers.h  test_ndef.c  test_ndef_text.c  test_ndef_tlv.c  test_st25dv.c
tools/: dump_parse.c
